Bug 507870 - Rectangular Region recordings lose almost all of the frames
Summary: Rectangular Region recordings lose almost all of the frames
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-08-04 22:48 UTC by Nate Graham
Modified: 2025-08-20 00:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-08-04 22:48:16 UTC
STEPS TO REPRODUCE
1. Meta+R, or else Launch Spectacle and make a start a new Rectangular Region recording
2. Drag a box to define an area and start recording
3. Move the point er around in the area 
4. Finish the recording


OBSERVED RESULT
The saved recording has only the final frame in it.


EXPECTED RESULT
The saved recording has everything it said it was going to record.


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.1
Kernel Version: 6.15.8-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 16 GiB of RAM (14.9 GiB usable)
Graphics Processor: AMD Radeon 780M Graphics

Also reproduced on a different machine with Intel graphics running KDE Linux, so hardware is probably not a factor here.


ADDITIONAL INFORMATION
Affects all recording types (WebM, MP4, WebP, and GIF) the same way.

Only affects Rectangular Region screen recordings. Full Screen and Window recordings are fine.
Comment 1 Ismael Asensio 2025-08-18 15:51:58 UTC
I can confirm on master

Operating System: Kubuntu 25.04
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.1
Kernel Version: 6.14.0-23-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-8565U CPU @ 1.80GHz
Memory: 16 GiB of RAM (15.3 GiB usable)
Graphics Processor: Intel® UHD Graphics 620
Comment 2 Zamundaaa 2025-08-20 00:25:09 UTC
Git commit eb45121e755f14d5ccec4a1cc5769b879b52f33c by Xaver Hugl.
Committed on 19/08/2025 at 23:14.
Pushed by zamundaaa into branch 'master'.

plugins/screencast: update the presentation timestamp when rendering

Otherwise it's just stuck at zero forever, which breaks Spectacle's recording.

M  +1    -0    src/plugins/screencast/regionscreencastsource.cpp
M  +1    -1    src/plugins/screencast/regionscreencastsource.h

https://invent.kde.org/plasma/kwin/-/commit/eb45121e755f14d5ccec4a1cc5769b879b52f33c