plugins/screencast: update the presentation timestamp when rendering

Otherwise it's just stuck at zero forever, which breaks Spectacle's recording.

BUG: 507870